--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
     <div class="section-container">
       <div class="menu-container">
         <div class="menu-items">
-          <img src="images/second.jpg" alt="Hot Beverages" class="menu-image">
+          <img src="images/second_two.jpg" alt="Hot Beverages" class="menu-image">
           <div class="menu-text">
             <h3 class="menu-heading">DRY CLEANING</h3>
             <p class="menu-description">Eco Friendly | Expert Stain Removal.</p>
