add link and map location

--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
           <p class="hero-description">Experience Freshness Like Never Before - Your Clothes Deserve the Best Care</p>
 
           <div class="hero-buttons">
-            <button class="button order-now-button"><img src="images/icons8-whatsapp-48.png" width="24" height="24" style="margin-right: 2px; margin-bottom: -6px;">Order Now</button>
+            <a href="https://wa.me/9779704524133">
+              <button class="button order-now-button"><img src="images/icons8-whatsapp-48.png" width="24" height="24" style="margin-right: 2px; margin-bottom: -6px;">Order Now</button>
+            </a>
             <button class="button contact-us-button" onclick="handleCall()">Contact Us</button>
           </div>
         </div>
@@ -219,6 +221,9 @@
           <div class="contact-item">
             <i class="fa-solid fa-location-crosshairs"></i>
             <p>Baluwakhani, Budanilkantha, Kathmandu, Nepal</p>
+          </div>
+          <div>
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3531.1202440867705!2d85.35069567524332!3d27.7444369761613!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb190022e0bd4d%3A0x5946a5d8186047ae!2sfresh%20and%20clean%20laundry!5e0!3m2!1sen!2snp!4v1725960062145!5m2!1sen!2snp" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
           </div>
           <div class="contact-item">
             <i class="fa-regular fa-envelope"></i>
