--- a/index.html
+++ b/index.html
@@ -222,8 +222,12 @@
             <i class="fa-solid fa-location-crosshairs"></i>
             <p>Baluwakhani, Budanilkantha, Kathmandu, Nepal</p>
           </div>
-          <div>
-            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3531.1202440867705!2d85.35069567524332!3d27.7444369761613!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb190022e0bd4d%3A0x5946a5d8186047ae!2sfresh%20and%20clean%20laundry!5e0!3m2!1sen!2snp!4v1725960062145!5m2!1sen!2snp" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+          <div style="width: 100%; max-width: 800px; height: 0; padding-bottom: 56.25%; position: relative;">
+            <iframe
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3531.1202440867705!2d85.35069567524332!3d27.7444369761613!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x39eb190022e0bd4d%3A0x5946a5d8186047ae!2sfresh%20and%20clean%20laundry!5e0!3m2!1sen!2snp!4v1725960062145!5m2!1sen!2snp"
+                style="position: absolute; top: 0; left: 0; width: 100%; height: 100%; max-height: 600px; border: 0;" 
+                allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
           </div>
           <div class="contact-item">
             <i class="fa-regular fa-envelope"></i>
